--- a/css/main.css
+++ b/css/main.css
@@ -251,6 +251,10 @@ li > .active {
 	color: #0d6efd;
 	margin-right: 8px;
 }
+.image-size {
+	width: 70%;
+	padding-bottom: 20px;
+}
 
 /* MEDIA QUERIES */
 /* BIGGER SCREENS */
